# drone

./: .gitignore  MARKET_READINESS_ASSESSMENT.md  README.md  cli.py  pyproject.toml  setup.py
apps/surveillance/: __init__.py  alerts.py  patrol.py
config/: default.yaml  laptop.yaml  sample_waypoints.json
core/: __init__.py
core/comms/: __init__.py  mqtt_client.py
core/data/: __init__.py  models.py  store.py
core/flight/: __init__.py  controller.py  telemetry.py
core/security/: __init__.py  audit.py  crypto.py  identity.py
core/vision/: __init__.py  camera.py  detector.py
tests/: test_models.py  test_security.py  test_store.py
tools/: provision.py  simulate.py
