[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-platform"
version = "0.1.0"
description = "Security-first drone software platform for Jetson devices"
requires-python = ">=3.8"
dependencies = [
    "pymavlink>=2.4.40",
    "opencv-python>=4.8.0",
    "paho-mqtt>=1.6.1",
    "cryptography>=41.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
jetson = [
    "onnxruntime-gpu>=1.16.0",
    "ultralytics>=8.0.0",
]
vision = [
    "ultralytics>=8.0.0",
]
sim = [
    "dronekit-sitl>=3.3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
drone-cli = "cli:main"

[tool.setuptools.packages.find]
include = ["core*", "apps*", "tools*"]

[tool.setuptools]
py-modules = ["cli"]
